--- a/index.eng.html
+++ b/index.eng.html
@@ -195,125 +195,51 @@ https://templatemo.com/tm-582-tale-seo-agency
       <div class="row mobile-vides">
         <div class="col-lg-12 ">
           <div class="owl-features owl-carousel">
+
+
             <div class="item">
               <img src="./img/1.jpg" alt="">
               <div class="down-content">
-                <h4>Digital Agency HTML Templates</h4>
+                <h4>Protexno — Maishiy texnikalar va telefonlar do'koni bo'lib, 3 yil kafolat ostida Toshkentda bo'ylab bepul yetkazib beradi. </h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item">
               <img src="./img/2.jpg" alt="">
               <div class="down-content">
-                <h4>Admin Dashboard CSS Templates</h4>
-                <a href="#"><i class="fa fa-link"></i></a>
-              </div>
-            </div>
-            <div class="item">
-              <img src="./img/3.jpg" alt="">
-              <div class="down-content">
-                <h4>Best Responsive Website Layouts</h4>
-                <a href="#"><i class="fa fa-link"></i></a>
-              </div>
-            </div>
-            <div class="item">
-              <img src="./img/4.jpg" alt="">
-              <div class="down-content">
-                <h4>HTML CSS Layouts for your websites</h4>
-                <a href="#"><i class="fa fa-link"></i></a>
-              </div>
-            </div>
-            <div class="item">
-              <img src="./img/5.jpg" alt="">
-              <div class="down-content">
-                <h4>Bootstrap 5 Themes for Free</h4>
-                <a href="#"><i class="fa fa-link"></i></a>
-              </div>
-            </div>
-            <div class="item">
-              <img src="./img/6.jpg" alt="">
-              <div class="down-content">
-                <h4>Mobile Friendly Website Layouts</h4>
-                <a href="#"><i class="fa fa-link"></i></a>
-              </div>
-            </div>
-            <div class="item">
-              <img src="./img/7.jpg" alt="">
-              <div class="down-content">
-                <h4>Mobile Friendly Website Layouts</h4>
-                <a href="#"><i class="fa fa-link"></i></a>
-              </div>
-            </div>
-            <div class="item">
-              <img src="./img/8.jpg" alt="">
-              <div class="down-content">
-                <h4>Mobile Friendly Website Layouts</h4>
+                <h4>Abu sahiy onlayn — O'zbekistondagi eng yirik internet do'konlaridan biri hisoblanadi. Brend asoschisi, elchi va bloger Feruzbek Kamolov.</h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item">
               <img src="./img/9.jpg" alt="">
               <div class="down-content">
-                <h4>Mobile Friendly Website Layouts</h4>
-                <a href="#"><i class="fa fa-link"></i></a>
-              </div>
-            </div>
-            <div class="item">
-              <img src="./img/10.jpg" alt="">
-              <div class="down-content">
-                <h4>Mobile Friendly Website Layouts</h4>
-                <a href="#"><i class="fa fa-link"></i></a>
-              </div>
-            </div>
-            <div class="item">
-              <img src="./img/11.jpg" alt="">
-              <div class="down-content">
-                <h4>Mobile Friendly Website Layouts</h4>
+                <h4>GRBS — O'zbekistonda xalqaro ta'lim va imtihon markazi bo'lgan xalqaro imtihonlarga va kasbga tayyorlash kurslarini taklif etadi.</h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item">
               <img src="./img/12.jpg" alt="">
               <div class="down-content">
-                <h4>Mobile Friendly Website Layouts</h4>
+                <h4>Boom box consulting — Ushbu yili kompaniya yordamida 1000dan ortiq abiturientlar Qozog'iston, Qirg'iziston va Tojikistondagi nufuzli universitetlar talabalari bo'ldi.</h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item">
               <img src="./img/13.jpg" alt="">
               <div class="down-content">
-                <h4>Mobile Friendly Website Layouts</h4>
+                <h4>As mobil — Andijon shahridagi telefon va aksessuarlar sotuvchi internet magazin bo'lib, u o'z mijozlarini chegurmalar bian tez tez xursand qiladi.</h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
             <div class="item">
               <img src="./img/14.jpg" alt="">
               <div class="down-content">
-                <h4>Mobile Friendly Website Layouts</h4>
+                <h4>Asia Avto Credit — Mamlakatimizda ko'p yillardan beri ma'lum shartlar asosida muddatsiz kreditga mashina sotib olish imkoniyatini beradi.</h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
-            <div class="item">
-              <img src="./img/15.jpg" alt="">
-              <div class="down-content">
-                <h4>Mobile Friendly Website Layouts</h4>
-                <a href="#"><i class="fa fa-link"></i></a>
-              </div>
-            </div>
-            <div class="item">
-              <img src="./img/16.jpg" alt="">
-              <div class="down-content">
-                <h4>Mobile Friendly Website Layouts</h4>
-                <a href="#"><i class="fa fa-link"></i></a>
-              </div>
-            </div>
-            <div class="item">
-              <img src="./img/17.jpg" alt="">
-              <div class="down-content">
-                <h4>Mobile Friendly Website Layouts</h4>
-                <a href="#"><i class="fa fa-link"></i></a>
-              </div>
-            </div>
+
           </div>
         </div>
       </div>
